anon login fixes, dark mode, other debugs

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  margin-bottom: 21px;
 }
 
 a {
@@ -94,6 +95,7 @@ button:focus-visible {
 /* Received messages */
 .chat-message-other {
   background-color: #f0f0f0; /* Light gray background */
+  color: rgb(31, 31, 31);
   text-align: left;
   width: fit-content;
   float: left; /* Align to left */
@@ -134,6 +136,8 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin-top: 9px;
+  max-width: 999px;
 }
 
 /* all message line content */
@@ -149,6 +153,11 @@ button:focus-visible {
 
 .chat-messages-new-input {
   width: 100%;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 9%;
+  border-bottom-left-radius: 9%;
+  margin-right:3px;
 }
 
 .selectedUserName {
@@ -158,8 +167,9 @@ button:focus-visible {
 
 .username-select {
   display: relative;
-  height: 100%;
   width: 100%;
+  margin-top: 9px;
+  margin-bottom: 9px;
   text-align: center;
   align-items: center;
   align-content: center;
@@ -180,6 +190,100 @@ button:focus-visible {
   align-items: center;
   align-content: center;
   font-weight: 400;
+}
+
+.main-app {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.night-mode {
+  background-color: rgb(44, 44, 44);
+  color: rgb(201, 201, 201);
+}
+
+.night-mode-section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-button-section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 21px;
+}
+
+.username-button-content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 21px;
+}
+
+.chat-button-content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 .logo {
@@ -230,7 +334,7 @@ button:focus-visible {
 .chat-main {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Full viewport height */
+  height: 100%; /* Full viewport height */
 }
 
 .chat-content {
@@ -239,4 +343,9 @@ button:focus-visible {
 
 .space-fill {
   flex-grow: 1;
+}
+
+.chat-send-button {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
